--- a/index.html
+++ b/index.html
@@ -5,30 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">  
   <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
+  <section>
+    <div class="image-div">
+      <img src="./assets/images/illustration-article.svg" alt="Yellow and black art design">
+    </div>
+    <div class="button">
+      <button>Learning</button>
+    </div>
+    <div class="date">
+      Published 21 Dec 2023
+    </div>
+    <div class="heading">
+      <h1>HTML & CSS foundations</h1>
+    </div>
+    <div class="card-content">
+      These languages are the backbone of every website, defining structure, content, and presentation.
+    </div>
+      <div class="author-container">
+        <div class="author-image">
+          <img src="./assets/images/image-avatar.webp" alt="Round picture of Author">
+        </div>
+        <div class="author-name">Greg Hooper</div>
+      </div>
+  </section>
   
-  <div class="attribution">
+  
+  <footer>  
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Simon Mac Aree</a>.
+</footer>
 </body>
+
 </html>
