Adding small changes to html and learning button

--- a/index.html
+++ b/index.html
@@ -12,26 +12,30 @@
 <body>
   <section>
     <div class="image-div">
-      <img src="./assets/images/illustration-article.svg" alt="Yellow and black art design">
+      <img class="art-img" src="./assets/images/illustration-article.svg" alt="Yellow and black art design">
     </div>
-    <div class="button">
-      <button>Learning</button>
-    </div>
-    <div class="date">
-      Published 21 Dec 2023
-    </div>
-    <div class="heading">
-      <h1>HTML & CSS foundations</h1>
-    </div>
-    <div class="card-content">
-      These languages are the backbone of every website, defining structure, content, and presentation.
-    </div>
+    <div class="info-container">
+      <div class="button-container">
+        <button type="button">Learning</button>
+      </div>
+      <div class="date">
+        Published 21 Dec 2023
+      </div>
+      <div class="heading">
+        <h1>HTML & CSS foundations</h1>
+      </div>
+      <div class="card-content">
+        These languages are the backbone of every website, defining structure, content, and presentation.
+      </div>
       <div class="author-container">
         <div class="author-image">
           <img src="./assets/images/image-avatar.webp" alt="Round picture of Author">
         </div>
         <div class="author-name">Greg Hooper</div>
       </div>
+    </div>
+    
+      
   </section>
   
   
