Adding filter and mobile sizing

--- a/index.html
+++ b/index.html
@@ -5,43 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link href='https://fonts.googleapis.com/css?family=Figtree' rel='stylesheet'>
   <link rel="stylesheet" href="styles.css">  
   <title>Frontend Mentor | Blog preview card</title>
 
 </head>
 <body>
-  <section>
+  <div class="container">
     <div class="image-div">
       <img class="art-img" src="./assets/images/illustration-article.svg" alt="Yellow and black art design">
     </div>
     <div class="info-container">
       <div class="button-container">
-        <button type="button">Learning</button>
+        <button type="button"><span><strong>Learning</strong></span></button>
       </div>
       <div class="date">
         Published 21 Dec 2023
       </div>
       <div class="heading">
-        <h1>HTML & CSS foundations</h1>
+        <h1><strong>HTML & CSS foundations</strong></h1>
       </div>
       <div class="card-content">
         These languages are the backbone of every website, defining structure, content, and presentation.
       </div>
       <div class="author-container">
         <div class="author-image">
-          <img src="./assets/images/image-avatar.webp" alt="Round picture of Author">
+          <img class="author-picture" src="./assets/images/image-avatar.webp" alt="Round picture of Author">
         </div>
-        <div class="author-name">Greg Hooper</div>
+        <div class="author-name"><strong>Greg Hooper</strong></div>
       </div>
     </div>
     
       
-  </section>
+  </div>
   
   
   <footer>  
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Simon Mac Aree</a>.
+    Coded by <a href="https://github.com/Simonbiker">Simon Mac Aree</a>.
 </footer>
 </body>
 
